# iotpos

./: CMakeLists.txt  INSTALL  install.sh
cmake/: InstallLegacyIcons.cmake
dataAccess/: azahar.cpp
icons/: CMakeLists.txt
iotstock/: CMakeLists.txt
iotstock/doc/: CMakeLists.txt
iotstock/src/: CMakeLists.txt  clienteditor.cpp  clienteditor.h  iotstock.cpp  iotstock.h  iotstockview.cpp  main.cpp  offersdelegate.cpp  producteditor.cpp  producteditor.h  promoeditor.cpp  promoeditor.h  providerseditor.cpp  providerseditor.h  purchaseeditor.cpp  purchaseeditor.h  subcategoryeditor.cpp  subcategoryeditor.h  usereditor.cpp  usereditor.h  usersdelegate.cpp
iotstock/src/po/: messages.sh
iotstock/src/ui/: editclient_widget.ui  editpromo_widget.ui  iotstockview_base.ui  promo.ui
mibitWidgets/: mibitdialog.h  mibitfloatpanel.h  mibitnotifier.h  mibitpassworddlg.h  mibittip.h
printing/: print-cups.cpp  print-cups.h
src/: CMakeLists.txt  dialogclientdata.cpp  dialogclientdata.h  iconutils.h  inputdialog.cpp  inputdialog.h  iotpos.cpp  iotpos.h  iotposview.cpp  kdialogshim.cpp  kdialogshim.h  localeutils.cpp  localeutils.h  loginwindow.cpp  main.cpp  pathutils.cpp  pathutils.h  pricechecker.cpp  pricechecker.h  productdelegate.cpp  reservations.cpp  reservations.h  resume.cpp  resume.h  soselector.cpp  soselector.h  sostatus.cpp  sostatus.h  specialordereditor.cpp  specialordereditor.h  ticketpopup.cpp  ticketpopup.h
src/po/: messages.sh
src/ui/: mainview.ui  soselector.ui  sostatus.ui  special_order.ui
